<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mariomunozmyaplication.gestionatunegocio.ui.productos.ProductosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_productos">
        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            />
    </fragment>


    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.mariomunozmyaplication.gestionatunegocio.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" >
        <action
            android:id="@+id/action_nav_pedidos_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_empleados"
        android:name="com.mariomunozmyaplication.gestionatunegocio.ui.empleados.EmpleadosFragment"
        android:label="@string/menu_empleados"
        tools:layout="@layout/fragment_empleados" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>